chore: add assignment4

--- a/a4/backend/templates/index.html
+++ b/a4/backend/templates/index.html
@@ -123,8 +123,8 @@
 					console.log(result);
 					document.getElementById("result").innerText =
 						result.prediction === 1
-							? "Positive for Diabetes"
-							: "Negative for Diabetes";
+							? "Positive for Diabetes for NB"
+							: "Negative for Diabetes for NB";
 				} catch (error) {
 					console.error("Error:", error);
 					document.getElementById("result").innerText =
@@ -161,8 +161,8 @@
 					console.log(result);
 					document.getElementById("result").innerText =
 						result.prediction === 1
-							? "Positive for Diabetes"
-							: "Negative for Diabetes";
+							? "Positive for Diabetes for PERCEPTRON"
+							: "Negative for Diabetes for PERCEPTRON";
 				} catch (error) {
 					console.error("Error:", error);
 					document.getElementById("result").innerText =
@@ -199,8 +199,8 @@
 					console.log(result);
 					document.getElementById("result").innerText =
 						result.prediction === 1
-							? "Positive for Diabetes"
-							: "Negative for Diabetes";
+							? "Positive for Diabetes for CUSTOM PERCEPTRON"
+							: "Negative for Diabetes for CUSTOM PERCEPTRON";
 				} catch (error) {
 					console.error("Error:", error);
 					document.getElementById("result").innerText =
